<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    <string name="nick_name">Insert your nick</string>

    <!-- Main menu -->
    <string name="button_singleplayer">Singleplayer</string>
    <string name="button_multiplayer">Multiplayer</string>
    <string name="title_activity_run_game">Bomberman Running</string>
    <string name="pause_button">Pause</string>
    <string name="quit_button">Quit</string>
    <string name="bomb_button">Bomb</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Player Score</string>
    <string name="time_left">Time Left</string>
    <string name="numb_players">Number Players</string>
    <string-array name="levels_array">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>

    <!-- Multiplayer -->
    <string name="title_activity_multiplayer">Multiplayer Mode</string>
    <string name="button_multiplayer_new_game">Host a new game</string>
    <string name="button_multiplayer_refresh_list">Refresh list</string>
    <string name="textView_multiplayer_list_item_name">Name</string>
    <string name="textView_multiplayer_list_item_players_label">Players:</string>
    <string name="textView_multiplayer_list_item_players_number">n</string>
    <string name="editText_dialog_new_multiplayer_game_name">Enter your game name here</string>
    <string name="editText_dialog_new_multiplayer_game_max">Max number of players</string>
    <string name="button_dialog_new_multiplayer_game_create">Create</string>
    <string name="button_dialog_new_multiplayer_game_cancel">Cancel</string>
    <string name="title_activity_multiplayer_game">MultiplayerGameActivity</string>
    <string name="level">Level</string>

</resources>
