<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nick_name"
        android:layout_alignParentTop="true"
        android:maxLength="5"
        android:singleLine="true" />

    <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nick_name" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_singleplayer"
        android:id="@+id/button_singleplayer"
        android:onClick="launchSingleplayer"
        android:layout_below="@+id/level_spinner"
            />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multiplayer"
        android:id="@+id/button_multiplayer"
        android:onClick="launchMultiplayer"
        android:layout_below="@+id/button_singleplayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/QuitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_button"
        android:onClick="quitApp"
        android:id="@+id/button"
        android:layout_below="@+id/button_multiplayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>