<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_multiplayer_list_item_name"
        android:id="@+id/textView_multiplayer_list_item_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_multiplayer_list_item_players_label"
        android:id="@+id/textView_multiplayer_list_item_players_label"
        android:layout_below="@+id/textView_multiplayer_list_item_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_multiplayer_list_item_players_number"
        android:id="@+id/textView_multiplayer_list_item_players_number"
        android:layout_below="@+id/textView_multiplayer_list_item_name"
        android:layout_toRightOf="@+id/textView_multiplayer_list_item_players_label" />
</RelativeLayout>
